; ModuleID = '/home/carl/AnghaBench/mongoose/examples/mqtt_over_websocket_server/extr_mqtt_over_websocket_server.c_main.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/mqtt_over_websocket_server/extr_mqtt_over_websocket_server.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mg_mgr = type { i32 }

@s_http_address = common dso_local global i32 0, align 4
@s_mqtt_address = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.mg_mgr, align 4
  store i32 0, i32* %1, align 4
  %3 = call i32 @mg_mgr_init(%struct.mg_mgr* %2, i32* null)
  %4 = load i32, i32* @s_http_address, align 4
  %5 = call i32 @start_http_server(%struct.mg_mgr* %2, i32 %4)
  %6 = load i32, i32* @s_mqtt_address, align 4
  %7 = call i32 @start_mqtt_server(%struct.mg_mgr* %2, i32 %6)
  br label %8

8:                                                ; preds = %8, %0
  %9 = call i32 @mg_mgr_poll(%struct.mg_mgr* %2, i32 1000)
  br label %8
}

declare dso_local i32 @mg_mgr_init(%struct.mg_mgr*, i32*) #1

declare dso_local i32 @start_http_server(%struct.mg_mgr*, i32) #1

declare dso_local i32 @start_mqtt_server(%struct.mg_mgr*, i32) #1

declare dso_local i32 @mg_mgr_poll(%struct.mg_mgr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
